--- a/alfredhelper/ncafesearch/index.html
+++ b/alfredhelper/ncafesearch/index.html
@@ -3,9 +3,9 @@
 <head>
 </head>
 <body>
-<script src="/js/cp949coder.js"></script>
+<script src="/webtoy/js/cp949coder.js"></script>
 <script>
-    window.location.href = 'https://cafe.naver.com/ArticleSearchList.nhn?search.clubid=10050146&search.query=' + encodeCP949(getQueryString('q'));
+    window.location.href = 'https://cafe.naver.com/';
 </script>
 </body>
 </html>
