--- a/alfredhelper/ncafesearch/index.html
+++ b/alfredhelper/ncafesearch/index.html
@@ -5,7 +5,7 @@
 <body>
 <script src="/webtoy/js/cp949coder.js"></script>
 <script>
-    window.location.href = 'https://cafe.naver.com/';
+    window.location.href = 'https://cafe.naver.com/ArticleSearchList.nhn?search.clubid=10050146&search.query=' + encodeCP949(getQueryString('q'));
 </script>
 </body>
 </html>
