--- a/redirector/ncafe/index.html
+++ b/redirector/ncafe/index.html
@@ -5,7 +5,12 @@
 <body>
 <script src="/webtoy/js/cp949coder.js"></script>
 <script>
-    window.location.href = 'https://cafe.naver.com/ArticleSearchList.nhn?search.clubid=' + getQueryString('c') + '&search.query=' + encodeCP949(getQueryString('q') + '&search.exclude=' + encodeCP949(getQueryString('e')) + '&search.searchBy=1');
+    window.location.href = 'https://cafe.naver.com/ArticleSearchList.nhn?search.clubid=' + getQueryString('c') + '&search.searchBy=1&search.query=' + encodeCP949(getQueryString('q') + '&search.exclude=' + encodeCP949(getQueryString('e')));
 </script>
 </body>
 </html>
+https://cafe.nav er.com/joonggonara?iframe_url=/ArticleSearchList.nhn%3Fsearch.clubid=10050146%26search.searchdate=all%26search.searchBy=1%26search.query=QQQQQQQ%26search.defaultValue=1%26search.includeAll=%26search.exclude=%26search.include=%26search.exact=%26search.sortBy=date%26userDisplay=15%26search.media=0%26search.option=0
+https://cafe.naver.com/joonggonara?iframe_url=/ArticleSearchList.nhn%3Fsearch.clubid=10050146%26search.searchdate=all%26search.searchBy=1%26search.query=%B8%C6%BA%CF+m1%26search.defaultValue=1%26search.includeAll=%26search.exclude=%26search.include=%26search.exact=%26search.sortBy=date%26userDisplay=15%26search.media=0%26search.option=0
+https://cafe.naver.com/joonggonara?iframe_url=/ArticleSearchList.nhn%3Fsearch.clubid=10050146%26search.searchdate=all%26search.searchBy=1%26search.query=%B8%C6%BA%CF+m1%26search.defaultValue=1%26search.includeAll=%26search.exclude=%BD%C7%B9%F6%26search.include=%26search.exact=%26search.sortBy=date%26userDisplay=15%26search.media=0%26search.option=0
+https://cafe.naver.com/joonggonara?iframe_url=/ArticleSearchList.nhn%3Fsearch.clubid=10050146%26search.searchdate=all%26search.searchBy=0%26search.query=%B8%C6%BA%CF+m1%26search.defaultValue=1%26search.includeAll=%26search.exclude=%BD%C7%B9%F6%26search.include=%26search.exact=%26search.sortBy=date%26userDisplay=15%26search.media=0%26search.option=0
+https://cafe.naver.com/joonggonara?iframe_url=/ArticleSearchList.nhn%3Fsearch.clubid=10050146%26search.searchdate=all%26search.searchBy=3%26search.query=%B8%C6%BA%CF+%BF%A1%BE%EE%26search.defaultValue=1%26search.sortBy=date
